# Making_Money

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: Home.py
app/pages/: 1_Factor_Explorer.py  2_Portfolio_Builder.py  3_Backtest_Results.py  4_Risk_Analytics.py
config/: default.yaml
src/backtest/: broker.py  engine.py  performance.py  report.py
src/data/: cleaner.py  downloader.py  storage.py
src/factors/: base.py  composite.py  momentum.py  registry.py  value.py
src/portfolio/: constraints.py  constructor.py  optimizer.py  rebalancer.py
src/universe/: provider.py  russell1000_tickers.csv
src/utils/: config.py  logger.py
tests/: conftest.py  test_backtest_engine.py  test_downloader.py  test_factors.py  test_optimizer.py
