[project]
name = "making-money"
version = "0.1.0"
description = "Quantitative Factor Investing - Multi-Factor Model"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=1.5",
    "pyarrow>=10.0",
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "plotly>=5.10",
    "matplotlib>=3.6",
    "streamlit>=1.20",
    "pyyaml>=6.0",
    "requests>=2.28",
    "lxml>=4.9",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
